# vanity-keypair-replicate

./: .gitignore  Cargo.toml  README.md  build.rs  cog.yaml  grind.sh  predict.py  test-cog.sh
src/: main.rs  vanity.rs
src/cuda/: vanity.cu
