[package]
name = "vanity-replicate"
version = "0.1.0"
edition = "2021"
authors = ["Shaw <shawmakesmagic@gmail.com>"]

[package.metadata.cog]
gpu = true

[features]
default = []
# Only enable cuda in environments where it's available
cuda = ["cc"]

[dependencies]
anyhow = "1.0.71"
schemars = "0.8.12"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10"
rand = "0.8"
bs58 = "0.5"
rayon = "1.8"
tokio = { version = "1.28.2", features = ["full"] }
num-format = "0.4"
logfather = "0.2"
cog-rust = "=1.0.10"
async-trait = "0.1"
[build-dependencies]

# Only required when cuda feature is enabled
cc = { version = "1.0", optional = true }
